Fixed mobile view of FA calculator (#3116)
* Fixed mobile view of FA calculator

* refactoring

* more refactoring

* fixed overlapping

--- a/static/scss/calculator.scss
+++ b/static/scss/calculator.scss
@@ -13,17 +13,44 @@
   }
 
   h3 {
-    border-bottom: none !important;
-    padding: 40px 40px 20px !important;
+    border-bottom: none;
+
+    @include breakpoint(phone) {
+      padding: 20px 20px 10px;
+    }
+
+    @include breakpoint(desktop) {
+      padding: 40px 40px 20px;
+    }
   }
 
   .financial-aid-calculator-body {
-    padding: 0 40px 20px !important;
-    overflow-y: visible !important;
+    @include breakpoint(desktop) {
+      padding: 0 40px 20px;
+      overflow-y: visible;
+    }
+
+    @include breakpoint(phone) {
+      overflow: scroll;
+      padding: 0 20px 10px;
+
+      .checkbox {
+        .mdl-checkbox__label {
+          font-size: 13px;
+          line-height: 1.2em;
+        }
+      }
+    }
   }
 
   .salary-input, .salary-input > div {
-    display:  flex;
+    @include breakpoint(phone) {
+      display: block;
+    }
+
+    @include breakpoint(desktop) {
+      display: flex;
+    }
   }
 
   .api-error {
@@ -41,12 +68,27 @@
     flex-direction: row;
     justify-content: space-between;
 
-    > div {
-      flex-direction: column;
-      width: 48%;
+    @include breakpoint(phone) {
+      padding: 15px;
+      margin-top: 15px;
 
-      > .title {
-        font-weight: 600;
+      > div {
+        width: 100%;
+      }
+
+      .currency > div {
+        padding-bottom: 6px;
+      }
+    }
+
+    @include breakpoint(desktop) {
+      > div {
+        flex-direction: column;
+        width: 48%;
+
+        > .title {
+          font-weight: 600;
+        }
       }
     }
   }
@@ -60,24 +102,48 @@
 
   .checkbox-alert {
     margin-left: 38px;
-    margin-top: 7px;
+
+    @include breakpoint(phone) {
+      margin-top: 38px;
+    }
+
+    @include breakpoint(desktop) {
+      margin-top: 7px;
+    }
   }
 
   .actions {
     width: 100%;
-    padding: 0 20px 20px 40px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+
+    @include breakpoint(desktop) {
+      padding: 0 20px 20px 40px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    @include breakpoint(phone) {
+      padding: 0 10px 10px 20px;
+      display: block;
+      text-align: left;
+    }
 
     .buttons {
       display: flex;
+      justify-content: flex-end;
     }
 
     .full-price {
       cursor: pointer;
-      font-size: 15px;
       font-weight: 400;
+
+      @include breakpoint(phone) {
+        font-size: 14px;
+      }
+
+      @include breakpoint(desktop) {
+        font-size: 15px;
+      }
     }
   }
 }
